@@ -352,3 +352,6 @@ your version.
 
 Note that the src/backend/bacon-video-widget-xine.c file does not require such
 an exception as it does not link to GStreamer plugins.
+
+Note that the src/totem-subtitle-encoding.c file was relicensed to LGPL
+(see http://bugzilla.gnome.org/show_bug.cgi?id=515809).
