@@ -1,3 +1,8 @@
+2008-05-11  Guillaume Desmottes  <gdesmott@gnome.org>
+	* COPYING
+	* src/totem-subtitle-encoding.c: Change licence from GPL
+	to LGPL (closes: #515809)
+
 2008-05-09  Bastien Nocera  <hadess@hadess.net>
 
 	* browser-plugin/totemGMPPlugin.cpp: fix plugin not showing up on
